# rust-course

./: Cargo.toml
examples/13_traits/: 5_validate.rs
examples/16_word_frequencies/: 5_text_stats.rs
examples/18_question_mark_operator/: 2_add_parsed_numbers.rs  3_count_file_lines.rs  4_sum_numbers_in_file.rs
