[package]
name = "cargo-course"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "cargo-course"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[test]]
name = "text_stats"
path = "examples/16_word_frequencies/5_text_stats.rs"

[package.metadata.exercises.13_question_mark_operator]
difficulty = "beginner"
tags = ["question-mark", "result", "error-handling"]

[dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ulid = "1.2"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time", "sync", "signal"] }

# CLI dependencies
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }

# Server dependencies
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
askama = { version = "0.16" }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
open = "5.3.5"
env_logger = "0.11"
toml = "1.0"
log = "0.4"
sha2 = "0.10"
syn = { version = "2", features = ["full", "extra-traits"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rand = "0.9"

[profile.dev]
# Faster dev builds: keep enough debug info for backtraces, drop the rest.
debug = "line-tables-only"

[lints.clippy]
# Lint groups need a lower priority than individual lint overrides so the
# `allow` entries below actually win against the group-level `warn`.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# This crate is internal (course infrastructure) and isn't published to
# crates.io, so the `cargo_common_metadata` lint about missing
# description/license/repository/keywords/categories doesn't apply.
cargo_common_metadata = "allow"
# Transitive dependency version conflicts (mostly windows-sys/windows-* and
# rand/getrandom variants pulled in by sqlx-mysql/sqlx-postgres which we don't
# use directly, plus ulid pulling rand 0.9 alongside rand 0.8). Not something
# we can fix in our source. Re-enable if you ever want to audit the dep graph.
multiple_crate_versions = "allow"
# The `#[derive(Template)]` macro from askama expands to code that
# triggers `manual_div_ceil`. Not actionable in our source.
manual_div_ceil = "allow"
